--- a/Front-angular/src/app/login/login.component.html
+++ b/Front-angular/src/app/login/login.component.html
@@ -1,42 +1,55 @@
-  <div class="col-md-12">
-    <div class="card card-container">
-      <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required
-            #username="ngModel" />
-          <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">
-            Username is required!
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6"
-            #password="ngModel" />
-          <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
-            <div *ngIf="password.errors.required">Password is required</div>
-            <div *ngIf="password.errors.minlength">
-              Password must be at least 6 characters
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary btn-block">
-            Login
-          </button>
-        </div>
-        <div class="form-group">
-          <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
-            Login failed: {{ errorMessage }}
-          </div>
-          <a [routerLink]="['/register']" class="nav-link" routerLink="register">Don't have an account yet? Create
-            now!</a>
+<div class="container-fluid d-flex align-items-center justify-content-center">
 
-        </div>
-      </form>
+  <div class="col-md-5">
 
-      <div class="alert alert-success" *ngIf="isLoggedIn">
-        Logged in as {{ roles }}.
+    <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+
+      <div class="form-group form-floating">
+
+
+
+        <input type="text" class="form-control" name="username" id="username" placeholder="username"
+          [(ngModel)]="form.username" required #username="ngModel" />
+
+        <label class="mx-3" for="username">Username</label>
+
+
+        <em class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">Username is required!</em>
       </div>
+
+
+      <div class="form-group form-floating">
+
+
+        <input type="password" class="form-control" name="password" id="password" placeholder="password"
+          [(ngModel)]="form.password" required minlength="6" #password="ngModel" />
+
+        <label class="mx-3" for="password">Password</label>
+
+
+        <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
+          <em *ngIf="password.errors.required">Password is required</em>
+          <em *ngIf="password.errors.minlength">Password must be at least 6 characters</em>
+        </div>
+
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary btn-block">
+          Login
+        </button>
+      </div>
+      <div class="form-group">
+        <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
+          Login failed: {{ errorMessage }}
+        </div>
+        <a [routerLink]="['/register']" class="nav-link">Don't have an account yet? Create
+          now!</a>
+
+      </div>
+    </form>
+
+    <div class="alert alert-success" *ngIf="isLoggedIn">
+      Logged in as {{ roles }}.
     </div>
   </div>
+</div>
