--- a/Front-angular/src/app/register/register.component.html
+++ b/Front-angular/src/app/register/register.component.html
@@ -1,85 +1,67 @@
-<div class="col-md-12">
-    <div class="card card-container">
-      <form
-        *ngIf="!isSuccessful"
-        name="form"
-        (ngSubmit)="f.form.valid && onSubmit()"
-        #f="ngForm"
-        novalidate
-      >
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            name="username"
-            [(ngModel)]="form.username"
-            required
-            minlength="3"
-            maxlength="20"
-            #username="ngModel"
-          />
-          <div class="alert-danger" *ngIf="username.errors && f.submitted">
-            <div *ngIf="username.errors.required">Username is required</div>
-            <div *ngIf="username.errors.minlength">
-              Username must be at least 3 characters
-            </div>
-            <div *ngIf="username.errors.maxlength">
-              Username must be at most 20 characters
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            [(ngModel)]="form.email"
-            required
-            email
-            #email="ngModel"
-          />
-          <div class="alert-danger" *ngIf="email.errors && f.submitted">
-            <div *ngIf="email.errors.required">Email is required</div>
-            <div *ngIf="email.errors.email">
-              Email must be a valid email address
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            [(ngModel)]="form.password"
-            required
-            minlength="6"
-            #password="ngModel"
-          />
-          <div class="alert-danger" *ngIf="password.errors && f.submitted">
-            <div *ngIf="password.errors.required">Password is required</div>
-            <div *ngIf="password.errors.minlength">
-              Password must be at least 6 characters
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary btn-block">Sign Up</button>
-          <a [routerLink]="['/login']" class="nav-link" routerLink="register">Already have account? Log in now</a>
+<div class="container-fluid d-flex align-items-center justify-content-center">
 
-        </div>
+  <div class="col-md-5">
 
 
-  
-        <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
-          Signup failed!<br />{{ errorMessage }}
+
+    <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+
+      <div class="form-group form-floating">
+
+        <input type="text" class="form-control" name="username" id="username" placeholder="username"
+          [(ngModel)]="form.username" required minlength="3" maxlength="20" #username="ngModel" />
+
+        <label class="mx-3" for="username">Username</label>
+
+        <div class="alert-danger" *ngIf="username.errors && f.submitted">
+          <em *ngIf="username.errors.required">Username is required</em>
+          <em *ngIf="username.errors.minlength">Username must be at least 3 characters</em>
+          <em *ngIf="username.errors.maxlength">Username must be at most 20 characters</em>
         </div>
-      </form>
-  
-      <div class="alert alert-success" *ngIf="isSuccessful">
-        Your registration is successful!
       </div>
+
+
+      <div class="form-group form-floating">
+
+        <input type="email" class="form-control" name="email" id="email" placeholder="example@example.com"
+          [(ngModel)]="form.email" required email #email="ngModel" />
+
+        <label class="mx-3" for="email">Email</label>
+
+        <div class="alert-danger" *ngIf="email.errors && f.submitted">
+          <em *ngIf="email.errors.required">Email is required</em>
+          <em *ngIf="email.errors.email">Email must be a valid email address</em>
+        </div>
+      </div>
+
+
+      <div class="form-group form-floating">
+
+        <input type="password" class="form-control" name="password" id="password" placeholder="password"
+          [(ngModel)]="form.password" required minlength="6" #password="ngModel" />
+        <label class="mx-3" for="password">Password</label>
+
+
+        <div class="alert-danger" *ngIf="password.errors && f.submitted">
+          <em *ngIf="password.errors.required">Password is required</em>
+          <em *ngIf="password.errors.minlength">Password must be at least 6 characters</em>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary btn-block">Sign Up</button>
+        <a [routerLink]="['/login']" class="nav-link" >Already have account? Log in now</a>
+      </div>
+
+
+
+      <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+        Signup failed! Please try again<br />{{ errorMessage }}
+      </div>
+    </form>
+
+
+    <div class="alert alert-success" *ngIf="isSuccessful">
+      Your registration is successful! You can login now.
     </div>
   </div>
+</div>
