--- a/Front-angular/src/app/Components/leftbar/leftbar.component.css
+++ b/Front-angular/src/app/Components/leftbar/leftbar.component.css
@@ -10,6 +10,9 @@ a {
   color: #2FCC76 !Important;
 }
 
+li{
+  list-style-type:none
+}
 li>a.active {
   color: #5ec48c;
   background-color: transparent
@@ -22,3 +25,10 @@ li>a.active {
   }
 
 }
+
+.sidebar-nav{
+  background-color: #F8751E !important;
+  box-shadow: 0px 0px 10px #00000029;
+}
+
+
