--- a/Front-angular/src/app/Components/products/myProduct/create-myProduct.component.html
+++ b/Front-angular/src/app/Components/products/myProduct/create-myProduct.component.html
@@ -12,10 +12,10 @@
         <input formControlName="name" id="productName" type="text" class="form-control" placeholder="product name..." />
       </div>
 
-      <div class="form-group" [ngClass]="{'error' :productType.invalid && productType.dirty }">
-        <label for="productType">Product type:</label>
-        <em *ngIf="productType.invalid && productType.dirty">Required</em>
-        <select formControlName="productType" class="form-control">
+      <div class="form-group" [ngClass]="{'error' :categoryId.invalid && categoryId.dirty }">
+        <label for="categoryId">Product type:</label>
+        <em *ngIf="categoryId.invalid && categoryId.dirty">Required</em>
+        <select formControlName="categoryId" class="form-control">
           <option value="">select product type...</option>
           <option value="1">Dairy and Egg Products</option>
           <option value="2">Spices and Herbs</option>
