--- a/Front-angular/src/app/Components/products/myProduct.component.html
+++ b/Front-angular/src/app/Components/products/myProduct.component.html
@@ -26,6 +26,6 @@
 
   </div>
 
-  <myProduct-thumbail [sortBy]="sortBy" [filterBy]="filterBy" [products]="products"></myProduct-thumbail>
+  <myProduct-table [sortBy]="sortBy" [filterBy]="filterBy" [products]="products"></myProduct-table>
 
 </div>
