--- a/Front-angular/src/app/Components/products/create/create-myProduct.component.html
+++ b/Front-angular/src/app/Components/products/create/create-myProduct.component.html
@@ -7,7 +7,7 @@
   <div class="col-md-6">
     <form [formGroup]="newMyProductForm" (ngSubmit)="saveSession(newMyProductForm.value)" autocomplete="off">
       <div class="form-group" [ngClass]="{'error' :name.invalid && name.dirty }">
-        <label for="sessionName">Product Name:</label>
+        <label for="productName">Product Name:</label>
         <em *ngIf="name.invalid && name.dirty">Required</em>
         <input formControlName="name" id="productName" type="text" class="form-control" placeholder="product name..." />
       </div>
@@ -32,15 +32,11 @@
         <input formControlName="quantity" id="quantity" type="text" class="form-control" placeholder="quantity..." />
       </div>
 
-      <div class="form-group" [ngClass]="{'error' :dateExp.invalid && dateExp.dirty }">
-        <label for="dateExp">Expiration date</label>
-        <em *ngIf="dateExp.invalid && dateExp.dirty">Required</em>
-        <input formControlName="dateExp" id="dateExp" type="date" class="form-control" placeholder="dateExp..." />
+      <div class="form-group" [ngClass]="{'error' :expireDate.invalid && expireDate.dirty }">
+        <label for="expireDate">Expiration date</label>
+        <em *ngIf="expireDate.invalid && expireDate.dirty">Required</em>
+        <input formControlName="expireDate" id="expireDate" type="date" class="form-control" placeholder="ExpireDate..." />
       </div>
-
-      <!-- TODO Change to date input -->
-
-
 
 
       <button type="submit" [disabled]="newMyProductForm.invalid" class="btn btn-primary">Save</button>
