--- a/Front-angular/src/app/Components/products/myProduct-table.component.html
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.html
@@ -18,7 +18,7 @@
                                               value="{{visibleProduct?.productId}}"></td>
         <td>{{visibleProduct?.name}}</td>
         <td style="text-align: center">{{visibleProduct?.quantity}}</td>
-        <td style="text-align: center">{{visibleProduct?.expireDate | date:'d-M-y'}}</td>
+        <td style="text-align: center">{{visibleProduct?.expireDate | date:'dd-MM-y'}}</td>
         <td style="text-align: center">
           <button>Edit</button>
         </td>
