--- a/Front-angular/src/app/Components/products/myProduct.component.html
+++ b/Front-angular/src/app/Components/products/myProduct.component.html
@@ -9,10 +9,12 @@
       <div class="btn-group btn-group-sm">
         <button class="btn btn-default" [class.active]="filterBy===0" (click)="filterBy=0">All</button>
         <button class="btn" [class.active]="filterBy===1" (click)="filterBy=1">Dairy and Egg
-          Products</button>
+          Products
+        </button>
         <button class="btn" [class.active]="filterBy===2" (click)="filterBy=2">Spices and Herbs</button>
         <button class="btn" [class.active]="filterBy===3" (click)="filterBy=3">Fats and
-          Oils</button>
+          Oils
+        </button>
       </div>
     </div>
 
