--- a/Front-angular/src/app/Components/products/myProduct-table.component.html
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.html
@@ -20,7 +20,7 @@
         <td style="text-align: center">{{visibleProduct?.quantity}}</td>
         <td style="text-align: center">{{visibleProduct?.expireDate | date:'dd-MM-y'}}</td>
         <td style="text-align: center">
-          <button>Edit</button>
+          <button [routerLink]="['/MyProducts/edit/' + visibleProduct?.productId]">Edit</button>
         </td>
         <td style="text-align: center"><i class="bi bi-x-lg" (click)="delete(visibleProduct?.productId)"></i></td>
       </tr>
