--- a/Front-angular/src/app/Components/products/edit/edit-myProduct.component.css
+++ b/Front-angular/src/app/Components/products/edit/edit-myProduct.component.css
@@ -1,3 +1,53 @@
+
+.container-fluid {
+  background-image: url("/assets/images/storage.jpg");
+  background-color: #F0F0F0;
+  height: 94.9vh
+}
+
+form {
+  padding: 5px;
+  padding-bottom: 10px;
+
+  background: rgba(255, 255, 255, 0.95) 0% 0% no-repeat padding-box;
+  box-shadow: 0px 6px 6px #00000029;
+  border: 1px solid #707070;
+  border-radius: 33px;
+}
+
+
+.form-group {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+button {
+  background: transparent linear-gradient(180deg, #3D8EF3 0%, #2251B9 100%) 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 19px;
+  width: 100%;
+  border: none;
+  color: white;
+  margin-top: 1em;
+  line-height: 2.5em;
+}
+
+input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid gray;
+  margin-top: 1em;
+}
+
+select {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid gray;
+  margin-top: 1em;
+}
+
+
 em {
   float: right;
   color: #E05C65;
