--- a/Front-angular/src/app/Components/login/login.component.css
+++ b/Front-angular/src/app/Components/login/login.component.css
@@ -1,8 +1,7 @@
 .container-fluid {
-
+  background-image: url("/assets/images/login.jpg");
   background-color: #F8751E;
   height: 100vh;
-
 }
 
 form {
@@ -35,8 +34,6 @@ input {
   border: none;
   border-bottom: 1px solid gray;
   margin-top: 1em;
-
-
 }
 
 label {
