--- a/Front-angular/src/app/Components/login/login.component.html
+++ b/Front-angular/src/app/Components/login/login.component.html
@@ -4,8 +4,10 @@
 
     <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
 
+      <div class="text-center">
+        <img src="/assets/images/EatMe.svg" alt="EatMe" class="img-fluid">
+      </div>
       <div class="form-group form-floating">
-
 
         <input type="text" class="form-control" name="username" id="username" placeholder="username"
                [(ngModel)]="form.username" required #username="ngModel"/>
@@ -13,11 +15,12 @@
         <label class="mx-3" for="username">Username</label>
 
 
-        <em class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">Username is required!</em>
+        <em  role="alert" *ngIf="username.errors && f.submitted">Username is required!</em>
       </div>
 
 
       <div class="form-group form-floating">
+
 
 
         <input type="password" class="form-control" name="password" id="password" placeholder="password"
@@ -26,7 +29,7 @@
         <label class="mx-3" for="password">Password</label>
 
 
-        <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
+        <div  role="alert" *ngIf="password.errors && f.submitted">
           <em *ngIf="password.errors.required">Password is required</em>
           <em *ngIf="password.errors.minlength">Password must be at least 6 characters</em>
         </div>
@@ -38,6 +41,9 @@
         </button>
       </div>
       <div class="form-group">
+
+
+
         <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
           Login failed: {{ errorMessage }}
         </div>
