--- a/Front-angular/src/app/Components/leftbar/leftbar.component.css
+++ b/Front-angular/src/app/Components/leftbar/leftbar.component.css
@@ -19,17 +19,28 @@ li > a.active {
   background-color: transparent
 }
 
-@media (max-width: 575px) {
-  .logo {
-    width: 75px;
-    height: 75px;
-  }
-
-}
-
 .sidebar-nav {
+  height: calc(100% - var(--topNavbarHeight));
   background-color: #F8751E !important;
   box-shadow: 0px 0px 10px #00000029;
 }
+.sidebar-link {
+  display: flex;
+  align-items: center;
+}
+.sidebar-link .right-icon {
+  display: inline-flex;
+}
+.sidebar-link[aria-expanded="true"] .right-icon {
+  transform: rotate(180deg);
+}
 
-
+@media (min-width: 992px) {
+  .sidebar-nav {
+    -webkit-transform: none;
+    transform: none;
+    visibility: visible !important;
+    height: 100%;
+    top: var(--topNavbarHeight);
+  }
+}
