--- a/Front-angular/src/app/Components/products/edit/edit-myProduct.component.html
+++ b/Front-angular/src/app/Components/products/edit/edit-myProduct.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid mt-5 pt-3">
+<div class="container-fluid">
   <div class="row justify-content-md-center">
-    <div class="col-md-8">
+    <div class="col-md-8  mt-5 pt-3">
       <form [formGroup]="editMyProductForm" (ngSubmit)="updateSession(editMyProductForm.value)" autocomplete="off">
 
         <div class="row text-center">
