myProduct update get categories, styling

--- a/Front-angular/src/app/Components/products/myProduct-table.component.css
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.css
@@ -1,8 +1,58 @@
+
 .bi-x-lg {
   color: #E05C65;
   cursor: pointer;
 }
 
+.bi-pencil-square{
+  cursor: pointer;
+}
+
 cell-center {
   text-align: center;
+}
+
+table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+table thead tr {
+  background-color: #2FCC76;
+  color: #ffffff;
+  text-align: left;
+}
+
+table th,
+table td {
+  padding: 12px 15px;
+  text-align: center;
+}
+
+table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+  border-bottom: 2px solid #2FCC76;
+}
+
+table tbody tr.active-row {
+  font-weight: bold;
+  color: #2FCC76;
+}
+
+select {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid gray;
+  margin-top: 1em;
 }
