--- a/Front-angular/src/app/Components/products/myProduct-table.component.html
+++ b/Front-angular/src/app/Components/products/myProduct-table.component.html
@@ -1,40 +1,61 @@
-<div class="card-body">
-  <div class="table-responsive">
-    <table id="ProductsTable" class="table table-striped table-hover" style="width: 100%">
-      <thead>
-      <tr>
-        <th style="width: 2%; text-align: center"></th>
-        <th style="width: 40%">Product</th>
-        <th style="width: 10%; text-align: center;">Quantity</th>
-        <th style="width: 10%; text-align: center;">Expire Date</th>
-        <th style="width: 10%; text-align: center">Change quantity</th>
-        <th style="width: 10%; text-align: center">Delete</th>
-      </tr>
-      </thead>
-      <tbody *ngFor="let visibleProduct of visibleProducts">
-      <tr>
-        <td style="text-align: center"><input type="checkbox" id="{{visibleProduct?.productId}}"
-                                              name="{{visibleProduct?.productId}}"
-                                              value="{{visibleProduct?.productId}}"></td>
-        <td>{{visibleProduct?.name}}</td>
-        <td style="text-align: center">{{visibleProduct?.quantity}}</td>
-        <td style="text-align: center">{{visibleProduct?.expireDate | date:'dd-MM-y'}}</td>
-        <td style="text-align: center">
-          <button [routerLink]="['/MyProducts/edit/' + visibleProduct?.productId]">Edit</button>
-        </td>
-        <td style="text-align: center"><i class="bi bi-x-lg" (click)="delete(visibleProduct?.productId)"></i></td>
-      </tr>
-      </tbody>
-      <tfoot>
-      <tr>
-        <th style="width: 2%; text-align: center"></th>
-        <th style="width: 40%">Product</th>
-        <th style="width: 10%; text-align: center;">Quantity</th>
-        <th style="width: 10%; text-align: center;">Expire Date</th>
-        <th style="width: 10%; text-align: center">Change quantity</th>
-        <th style="width: 10%; text-align: center">Delete</th>
-      </tr>
-      </tfoot>
-    </table>
+<div class="row ">
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label" for="category-select">Product type:</label>
+    <div class="col-sm-10">
+      <select [ngModel]="filterBy" (ngModelChange)="changeFilter($event)" id="category-select">
+        <option selected="selected" value=0> All</option>
+        <option *ngFor="let category of categories" [value]="category.categoryId"> {{category.title}} </option>
+      </select>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label" for="order-select">Sort By:</label>
+    <div class="col-sm-10">
+      <select [ngModel]="sortBy" (ngModelChange)="changeSort($event)" id="order-select">
+        <option value='dateExp'> Expiration date</option>
+        <option selected="selected" value='name'> Name</option>
+        <option value='dateAdd'> Date added</option>
+      </select>
+    </div>
   </div>
 </div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table id="ProductsTable" class="table table-striped table-hover" style="width: 100%">
+        <thead>
+        <tr>
+          <th style="width: 2%"></th>
+          <th style="width: 60%; text-align: left;">Product</th>
+          <th style="width: 10%">Quantity</th>
+          <th style="width: 10%">Expire Date</th>
+          <th style="width: 3%">Edit</th>
+          <th style="width: 3%">Delete</th>
+        </tr>
+        </thead>
+        <tbody *ngFor="let visibleProduct of visibleProducts">
+        <tr>
+          <td><input type="checkbox" id="{{visibleProduct?.productId}}"
+                     name="{{visibleProduct?.productId}}"
+                     value="{{visibleProduct?.productId}}"></td>
+          <td style="text-align: left">{{visibleProduct?.name}}</td>
+          <td>{{visibleProduct?.quantity}}</td>
+          <td>{{visibleProduct?.expireDate | date:'dd-MM-y'}}</td>
+          <td>
+            <i class="bi bi-pencil-square" [routerLink]="['/MyProducts/edit/' + visibleProduct?.productId]"></i>
+          </td>
+          <td><i class="bi bi-x-lg" (click)="delete(visibleProduct?.productId)"></i></td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+          <th style="width: 2%"></th>
+          <th style="width: 40%; text-align: left;">Product</th>
+          <th style="width: 10%">Quantity</th>
+          <th style="width: 10%">Expire Date</th>
+          <th style="width: 10%">Edit</th>
+          <th style="width: 10%">Delete</th>
+        </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
