--- a/Front-angular/src/app/Components/products/myProduct.component.html
+++ b/Front-angular/src/app/Components/products/myProduct.component.html
@@ -1,33 +1,11 @@
-<div class="container-fluid mt-5 pt-3">
+<div class="container-fluid mp-3">
   <div class="row">
 
     <div class="col-md-4">
       <h1>My products</h1>
     </div>
-
-    <div class="col-md-4">
-      <div class="btn-group btn-group-sm">
-        <button class="btn btn-default" [class.active]="filterBy===0" (click)="filterBy=0">All</button>
-        <button class="btn" [class.active]="filterBy===1" (click)="filterBy=1">Dairy and Egg
-          Products
-        </button>
-        <button class="btn" [class.active]="filterBy===2" (click)="filterBy=2">Spices and Herbs</button>
-        <button class="btn" [class.active]="filterBy===3" (click)="filterBy=3">Fats and
-          Oils
-        </button>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="btn-group btn-group-sm">
-        <button class="btn btn-default" [class.active]="sortBy==='anamell'" (click)="sortBy='name'">By Name</button>
-        <button class="btn" [class.active]="sortBy==='dateAdd'" (click)="sortBy='dateAdd'">By Date Added</button>
-        <button class="btn" [class.active]="sortBy==='dateExp'" (click)="sortBy='dateExp'">Expiration date</button>
-      </div>
-    </div>
-
   </div>
 
-  <myProduct-table [sortBy]="sortBy" [filterBy]="filterBy" [products]="products"></myProduct-table>
+    <myProduct-table [categories]="categories" [products]="products"></myProduct-table>
 
 </div>
